--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <nav>
-            <img src="vitlogo.png" alt="vitlogo">
-            <h1>VTOP (CHENNAI CAMPUS)</h1>
-        </nav>   
+        <header>
+            <nav>
+                <img src="vitlogo.png" alt="vitlogo">
+                <h1>VTOP (CHENNAI CAMPUS)</h1>
+            </nav> 
+        </header> 
+        <p>
+        <div class="main">
+            <div class="sub1">
+                <h3>For Students and Employee </h3>
+                <p>With responsive fresh look and feel.
+                <button class="b1">LOGIN TO VTOP</button>
+                </p>
+            </div>
+            <div class="sub2"> 
+                <h3>For Parents</h3>
+                <p>With more information about students
+                <button class="b2">PARENT LOGIN</button>
+            </p>
+            </div>
+            <div class="sub3">
+                <h3>For Alumni</h3>
+                <p>Introduced with Transcript Services
+                <button class="b3">ALMUNI LOGIN</button>
+            </p>
+            </div>
+        </div>
+        <div class="main2">
+            <h3 class="s">SPOTLIGHT</h3>
+        </div>
+    </p>
 </body>
 </html>
