--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <div class="main">
             <div class="sub1">
                 <h3>For Students and Employee </h3>
-                <p>With responsive fresh look and feel.
+                <p>With responsive fresh look and feel.<br>
                 <button class="b1">LOGIN TO VTOP</button>
                 </p>
             </div>
             <div class="sub2"> 
                 <h3>For Parents</h3>
-                <p>With more information about students
+                <p>With more information about students<br>
                 <button class="b2">PARENT LOGIN</button>
             </p>
             </div>
             <div class="sub3">
                 <h3>For Alumni</h3>
-                <p>Introduced with Transcript Services
+                <p>Introduced with Transcript Services<br>
                 <button class="b3">ALMUNI LOGIN</button>
             </p>
             </div>
