--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VIT CHENNAI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div class="sub1">
                 <h3>For Students and Employee </h3>
                 <p>With responsive fresh look and feel.<br>
-                <button class="b1">LOGIN TO VTOP</button>
+                <button class="b1" onclick="window.location.href='LOGIN.html'">LOGIN TO VTOP</button>
                 </p>
             </div>
             <div class="sub2"> 
