--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="sub1">
                 <h3>For Students and Employee </h3>
                 <p>With responsive fresh look and feel.<br>
-                <button class="b1" onclick="window.location.href='LOGIN.html'">LOGIN TO VTOP</button>
+                <button class="b1" onclick="window.location.href='login.html'">LOGIN TO VTOP</button>
                 </p>
             </div>
             <div class="sub2"> 
