--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="sub2"> 
                 <h3>For Parents</h3>
                 <p>With more information about students<br>
-                <button class="b2">PARENT LOGIN</button>
+                <button class="b2" onclick="window.location.href='plogin.html'">PARENT LOGIN</button>
             </p>
             </div>
             <div class="sub3">
                 <h3>For Alumni</h3>
                 <p>Introduced with Transcript Services<br>
-                <button class="b3">ALMUNI LOGIN</button>
+                <button class="b3" onclick="window.location.href='alogin.html'">ALMUNI LOGIN</button>
             </p>
             </div>
         </div>
