--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     </header> 
     <div>
         <h2> LOGIN TO VTOP </h2>
-        <input id="reg" type="text"  placeholder="Registration Number"  autocomplete="on" autofocus />
+        <input id="reg" type="text"  placeholder="USER NAME"  autocomplete="on" autofocus />
         <br>
         <input id="pwd" type="password" placeholder="Password" autocomplete="on" />
         <br>
