--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
     </header> 
     <div>
         <h2> LOGIN TO VTOP </h2>
-        <input id="reg" type="text"  placeholder="USER NAME"  autocomplete="on" autofocus />
+        <input id="reg" type="text"  placeholder="USER NAME"  autocomplete="on" autofocus required/>
         <br>
-        <input id="pwd" type="password" placeholder="Password" autocomplete="on" />
+        <input id="pwd" type="password" placeholder="Password" autocomplete="on" required/>
         <br>
         <p> 
             <a href="index.html" id="fp">Forgot password</a>
