--- a/alogin.html
+++ b/alogin.html
@@ -25,7 +25,7 @@
         <input id="em" type="email" placeholder="Enter Alumni email " pattern="[^ @]*@[^ @]*" autocomplete="on" required/>
         <p> 
             
-            <button id="si">
+            <button id="si" onclick="index.html">
                 SIGN IN
             </button>
         </p>
