--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <br>
         <p> 
             <a href="index.html" id="fp">Forgot password</a>
-            <button id="si" onclick="index.html">
+            <button id="si" onclick="window.location.href='index.html'">
                 SIGN IN
             </button>
         </p>
