--- a/plogin.html
+++ b/plogin.html
@@ -24,7 +24,7 @@
         <input id="no" type="tel" pattern="^\d{10}$" placeholder="Enter Parents mobile number" autocomplete="on" required/>
         <p> 
             
-            <button id="si" onclick="index.html">
+            <button id="si" onclick="window.location.href='index.html'">
                 SIGN IN
             </button>
         </p>
